# api-playwright-tests

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/api/clients/: base_client.py  users_client.py
src/api/utils/: allure_helpers.py
tests/: conftest.py
tests/api/: test_users.py
